@startuml
class light.PointLight {
}
class light.DirectionalLigth {
}
class sae101.raytracer.RayTracer {
- Scene scene
- int imgHeight
- int imgWidth
+ void view(String)
}
class Camera {
- Vector lookFrom
- Vector lookAt
- Vector up
- int fov
+ Vector getW()
+ Vector getU()
+ Vector getV()
+ double getFovR()
+ Vector getLookFrom()
+ Vector getLookAt()
+ Vector getUp()
+ int getFov()
+ void setFov(int)
+ String toString()
}
interface scene.Builder {
~ void setCamera(Camera)
~ void setDimensions(float,float)
~ void addLight(Light)
~ void addObject(SceneObjects)
~ Scene build()
}
class scene.Scene {
- Camera camera
- float height
- float width
- List<Light> light
- List<SceneObjects> sceneobj
- Color ambient
- List<Point> points
+ Camera getCamera()
+ List<Light> getLight()
+ List<SceneObjects> getSceneobj()
+ float getHeight()
+ float getWidth()
+ Color getAmbient()
}
class triplet.Point {
- Triplet coor
+ Triplet getCoor()
+ void setCoor(Triplet)
+ Vector sub(Point)
+ Point multiply(double)
+ String toString()
}
class objects.Sphere {
- double radius
}
class scene.SceneBuilder {
- Camera camera
- float height
- float width
- List<Light> lights
- List<SceneObjects> sceneObjs
- Color ambient
- Color diffuse
- Color specular
- int shininess
- int maxverts
- List<Point> points
+ void setCamera(Camera)
+ void setDimensions(float,float)
+ void setAmbient(Color)
+ void setDiffuse(Color)
+ void setSpecular(Color)
+ void setShininess(int)
+ void setMaxverts(int)
+ int getMaxverts()
+ int getShininess()
+ Color getSpecular()
+ Color getDiffuse()
+ Color getAmbient()
+ SceneObjects getObj(int)
+ void addLight(Light)
+ void addPoint(Point)
+ void addObject(SceneObjects)
+ Scene build()
}
abstract class scene.SceneObjects {
- Triplet position
- Triplet diffuseColor
- Triplet specularColor
- int shininess
~ SceneBuilder sceneBuilder
+ Triplet getPosition()
+ Triplet getDiffuseColor()
+ Triplet getSpecularColor()
+ int getShininess()
+ void setDiffuseColor()
+ void setSpecularColor()
+ void setShininess(int)
}
class triplet.Triplet {
- double x
- double y
- double z
+ double getX()
+ void setX(double)
+ double getY()
+ void setY(double)
+ double getZ()
+ void setZ(double)
+ Triplet add(Triplet)
+ Triplet sub(Triplet)
+ Triplet multiply(double)
+ double scalarProduct(Triplet)
+ Triplet vectorProduct(Triplet)
+ Triplet schurProduct(Triplet)
+ double length()
+ Triplet normalize()
+ String toString()
}
class Main {
+ {static} void main(String[])
}
class objects.Triangle {
- Triplet vertex1
- Triplet vertex2
- Triplet vertex3
- Triplet normal
}
class triplet.Vector {
- Triplet coor
+ Triplet getCoor()
+ void setCoor(Triplet)
+ Point add(Point)
+ Vector add(Vector)
+ Vector sub(Vector)
+ Vector multiply(double)
+ double scalarProduct(Vector)
+ Vector vectorProduct(Vector)
+ double length()
+ Vector normalize()
+ String toString()
}
class objects.Plane {
- Triplet normal
}
class triplet.Color {
- Triplet coor
+ Triplet getCoor()
+ void setCoor(Triplet)
+ Color add(Color)
+ Color multiply(double)
+ Color schurProduct(Color)
+ String toString()
}
class parser.Parser {
+ {static} SceneBuilder sceneBuilder
- File file
- BufferedReader in
+ Scene build()
}
abstract class light.Light {
- Triplet coordinate
- Color color
+ Triplet getCoordinate()
+ Color getColor()
+ void setCoordinate(Triplet)
+ void setColor(Color)
}


light.Light <|-- light.PointLight
light.Light <|-- light.DirectionalLigth
scene.SceneObjects <|-- objects.Sphere
scene.Builder <|.. scene.SceneBuilder
objects.SceneObject <|-- objects.Triangle
objects.SceneObject <|-- objects.Plane
@enduml